--- a/patrolhound/build.gradle
+++ b/patrolhound/build.gradle
@@ -3,13 +3,38 @@ version '1.0-SNAPSHOT'
 
 apply plugin: 'java'
 apply plugin: 'war'
+apply from: 'provided.gradle'
 
-sourceCompatibility = 1.5
+sourceCompatibility = 1.8
 
 repositories {
+    mavenLocal()
     mavenCentral()
 }
 
 dependencies {
-    testCompile group: 'junit', name: 'junit', version: '4.11'
+    compile group: 'org.projectlombok', name: 'lombok', version: '1.16.4'
+    provided group: 'org.projectlombok', name: 'lombok', version: '1.16.4'
+
+    compile group: 'ch.qos.logback', name: 'logback-classic', version: '1.1.3'
+    compile group: 'org.slf4j', name: 'slf4j-api', version: '1.7.12'
+
+    compile("org.springframework.boot:spring-boot-starter-web:1.2.7.RELEASE")
+
+    compile group: 'net.sourceforge.htmlunit', name: 'htmlunit', version: '2.16'
+
+    compile group: 'org.apache.commons', name: 'commons-math3', version: '3.5'
+    compile group: 'org.apache.commons', name: 'commons-lang3', version: '3.4'
+
+    compile group: 'org.jooq', name: 'jooq', version: '3.6.2'
+    compile group: 'org.quartz-scheduler', name: 'quartz', version: '2.2.1'
+
+    compile group: 'ro.isdc.wro4j', name: 'wro4j-core', version: '1.7.8'
+    compile group: 'ro.isdc.wro4j', name: 'wro4j-extensions', version: '1.7.8'
+    compile group: 'org.webjars', name: 'bootstrap', version: '3.3.4'
+
+    testCompile group: 'junit', name: 'junit', version: '4.12'
+    testCompile group: 'org.assertj', name: 'assertj-core', version: '3.0.0'
+    testCompile group: 'org.mockito', name: 'mockito-all', version: '2.0.2-beta'
+
 }
