--- a/.gitignore
+++ b/.gitignore
@@ -113,3 +113,7 @@ gradle-app.setting
 
 # Avoid ignoring Gradle wrapper jar file (.jar files are usually ignored)
 !gradle-wrapper.jar
+
+/patrolhound/src/main/generated-src/
+
+/patrolhound/src/main/resources/application.properties
