--- a/patrolhound/pom.xml
+++ b/patrolhound/pom.xml
@@ -125,6 +125,23 @@
             <version>1.2</version>
         </dependency>
 
+		 <!-- Rewrite / Pretty Faces -->
+		 <dependency>
+			 <groupId>org.ocpsoft.rewrite</groupId>
+			 <artifactId>rewrite-servlet</artifactId>
+			 <version>2.0.12.Final</version>
+		 </dependency>
+		 <dependency>
+			 <groupId>org.ocpsoft.rewrite</groupId>
+			 <artifactId>rewrite-config-prettyfaces</artifactId>
+			 <version>2.0.12.Final</version>
+		 </dependency>
+		 <dependency>
+			 <groupId>org.ocpsoft.prettytime</groupId>
+			 <artifactId>prettytime-integration-jsf</artifactId>
+			 <version>3.2.5.Final</version>
+		 </dependency>
+
         <!-- Wro4j -->
         <dependency>
             <groupId>ro.isdc.wro4j</groupId>
