--- a/patrolhound/pom.xml
+++ b/patrolhound/pom.xml
@@ -92,7 +92,7 @@
             <artifactId>commons-lang3</artifactId>
         </dependency>
 
-        <!--JOOQ -->
+        <!--Database & JOOQ -->
         <dependency>
             <groupId>org.jooq</groupId>
             <artifactId>jooq</artifactId>
@@ -103,6 +103,11 @@
             <artifactId>commons-dbcp2</artifactId>
             <version>2.1.1</version>
         </dependency>
+		 <dependency>
+			 <groupId>org.postgresql</groupId>
+			 <artifactId>postgresql</artifactId>
+			 <version>9.4-1201-jdbc41</version>
+		 </dependency>
 
 
         <!-- Standard Servlet dependencies. -->
