Added #offers column and logic

--- a/patrolhound/src/main/resources/MessageResources.properties
+++ b/patrolhound/src/main/resources/MessageResources.properties
@@ -18,6 +18,7 @@ company.phone.placeholder=Enter phone number
 company.phone=Phone Number
 company.street.placeholder=Enter company street
 company.street=Street
+company.offers=#Offers
 delete=Delete
 save=Save
 yes=Yes
