Added Stanford tokenizer

--- a/patrolhound/pom.xml
+++ b/patrolhound/pom.xml
@@ -85,6 +85,14 @@
 			<version>3.4</version>
 		</dependency>
 
+		<!-- NLP -->
+		<dependency>
+			<groupId>edu.stanford.nlp</groupId>
+			<artifactId>stanford-corenlp</artifactId>
+			<version>3.6.0</version>
+		</dependency>
+
+
 		<!--Database & JOOQ -->
 		<dependency>
 			<groupId>org.jooq</groupId>
