--- a/patrolhound/src/main/resources/MessageResources.properties
+++ b/patrolhound/src/main/resources/MessageResources.properties
@@ -19,6 +19,7 @@ company.phone=Phone Number
 company.street.placeholder=Enter company street
 company.street=Street
 company.offers=#Offers
+company.tags=Tags
 delete=Delete
 save=Save
 yes=Yes
