Added Updated Column

--- a/patrolhound/src/main/resources/MessageResources.properties
+++ b/patrolhound/src/main/resources/MessageResources.properties
@@ -1,6 +1,7 @@
 cancel=Cancel
 close=Close
 company.announced=Announced
+company.updated=Last Update
 company.city.placeholder=Enter city
 company.city=City
 company.contactPerson.placeholder=Enter contact person
