--- a/patrolhound/pom.xml
+++ b/patrolhound/pom.xml
@@ -68,6 +68,14 @@
 			<version>4.0.2.RELEASE</version>
 		</dependency>
 
+		<!-- Scheduling -->
+		<dependency>
+			<groupId>org.quartz-scheduler</groupId>
+			<artifactId>quartz</artifactId>
+			<version>2.2.2</version>
+		</dependency>
+
+
 		<!-- Crawler -->
 		<dependency>
 			<groupId>net.sourceforge.htmlunit</groupId>
@@ -195,6 +203,11 @@
 			<artifactId>junit</artifactId>
 			<version>4.12</version>
 			<scope>test</scope>
+		</dependency>
+		<dependency>
+			<groupId>org.mockito</groupId>
+			<artifactId>mockito-core</artifactId>
+			<version>1.10.19</version>
 		</dependency>
 
 	</dependencies>
