--- a/patrolhound/pom.xml
+++ b/patrolhound/pom.xml
@@ -45,6 +45,12 @@
 			<artifactId>slf4j-api</artifactId>
 			<version>1.7.12</version>
 		</dependency>
+		<dependency>
+			<groupId>org.slf4j</groupId>
+			<artifactId>jcl-over-slf4j</artifactId>
+			<version>1.7.12</version>
+		</dependency>
+
 
 		<!-- Spring -->
 		<dependency>
